--- a/app/views/academic_years/_accordion_widget.slim
+++ b/app/views/academic_years/_accordion_widget.slim
@@ -1,5 +1,5 @@
 - mode ||= "normal"
-#accordion.panel-group.fadeInDown.animation-delay2
+#accordion.panel-group
   - if academic_years.empty?
     = render "academic_years/accordion_widget/empty", mode: mode
   - else
