--- a/app/views/assigned_students/_simple_widget.slim
+++ b/app/views/assigned_students/_simple_widget.slim
@@ -1,5 +1,5 @@
 - mode ||= "normal"
-.panel.panel-default.fadeInDown.animation-delay2
+.panel.panel-default
   .panel-heading 
     = title
   .panel-body.no-padding
