--- a/app/views/deliveries/show/_description.slim
+++ b/app/views/deliveries/show/_description.slim
@@ -1,4 +1,4 @@
-.panel.panel-default.fadeInDown.animation-delay1 
+.panel.panel-default 
   .panel-heading Descrição da entrega
   .panel-body.project-info 
     = raw delivery.description.try(:html_safe)
