--- a/app/views/grades/_evaluate_group.slim
+++ b/app/views/grades/_evaluate_group.slim
@@ -1,5 +1,5 @@
 = form_tag "/grades/evaluate_group", method: "post"
-  .panel.panel-default.fadeInDown.animation-delay1
+  .panel.panel-default
     .panel-heading 
       | Avaliação
     .panel-body.no-padding
