--- a/app/views/groups/_simple_widget.slim
+++ b/app/views/groups/_simple_widget.slim
@@ -1,5 +1,5 @@
 - mode ||= "project"
-.panel.panel-default.fadeInDown.animation-delay2
+.panel.panel-default
   .panel-heading 
     = title
     - if !group.nil? and !group.valid_nr?
