--- a/app/views/groups/_widgets_group.slim
+++ b/app/views/groups/_widgets_group.slim
@@ -1,4 +1,4 @@
-.panel.panel-default.fadeInDown.animation-delay2 style="margin:0px 15px 15px 15px" 
+.panel.panel-default style="margin:0px 15px 15px 15px" 
   .panel-heading Todos os grupos de trabalho
   - if groups.empty?
     = render "groups/widgets_group/empty"
