--- a/app/views/phases/_accordion_widget.slim
+++ b/app/views/phases/_accordion_widget.slim
@@ -1,5 +1,5 @@
 - mode ||= "default"
-#accordion.panel-group.fadeInDown.animation-delay2
+#accordion.panel-group
   - if phases.empty?
     = render "phases/accordion_widget/empty"
   - else
