--- a/app/views/phases/accordion_widget/_empty.slim
+++ b/app/views/phases/accordion_widget/_empty.slim
@@ -1,4 +1,4 @@
-.panel.panel-default.fadeInDown.animation-delay2
+.panel.panel-default
   .panel-heading Fases
   .panel-body.no-padding
     ul#feedList.list-group
