--- a/app/views/projects/show/_utilities.slim
+++ b/app/views/projects/show/_utilities.slim
@@ -1,48 +1,47 @@
-.fadeInDown.animation-delay2
-  .row.project-utilities
-    - if project.statement
-      = link_to show_file_path project.statement, target: "_blank"
-        .col-sm-6.col-md-6
-          .panel-stat3.bg-primary
-            h5 Enunciado
-            .stat-icon
-              i.fa.fa-file-text-o.fa-2x
-    - else
+.row.project-utilities
+  - if project.statement
+    = link_to show_file_path project.statement, target: "_blank"
       .col-sm-6.col-md-6
-        .panel-stat3.bg-primary
+        .panel-stat3.bg-primary 
           h5 Enunciado
           .stat-icon
             i.fa.fa-file-text-o.fa-2x
-    - if !project.min_elems.nil?
-      = link_to project_groups_path project
-        .col-sm-6.col-md-6
-          .panel-stat3.bg-warning
-            h5 Grupos
-            .stat-icon
-              i.fa.fa-users.fa-2x
-    - else
+  - else
+    .col-sm-6.col-md-6
+      .panel-stat3.bg-primary style="opacity:0.2"
+        h5 Enunciado
+        .stat-icon
+          i.fa.fa-file-text-o.fa-2x
+  - if !project.min_elems.nil?
+    = link_to project_groups_path project
       .col-sm-6.col-md-6
-        .panel-stat3.bg-warning style="opacity:0.2"
+        .panel-stat3.bg-warning
           h5 Grupos
           .stat-icon
             i.fa.fa-users.fa-2x
-    - if !project.phases.empty?
-      = link_to phase_path project.current_or_nearest_phase
-        .col-sm-6.col-md-6
-          .panel-stat3.bg-info
-            h5 Fases e entregas
-            .stat-icon
-              i.fa.fa-archive.fa-2x
-    - else
+  - else
+    .col-sm-6.col-md-6
+      .panel-stat3.bg-warning style="opacity:0.2"
+        h5 Grupos
+        .stat-icon
+          i.fa.fa-users.fa-2x
+  - if !project.phases.empty?
+    = link_to phase_path project.current_or_nearest_phase
       .col-sm-6.col-md-6
-        .panel-stat3.bg-info style="opacity:0.2"
+        .panel-stat3.bg-info
           h5 Fases e entregas
           .stat-icon
             i.fa.fa-archive.fa-2x
+  - else
+    .col-sm-6.col-md-6
+      .panel-stat3.bg-info style="opacity:0.2"
+        h5 Fases e entregas
+        .stat-icon
+          i.fa.fa-archive.fa-2x
 
-    = link_to project_grades_path project
-      .col-sm-6.col-md-6
-        .panel-stat3.bg-success
-          h5 Avaliações
-          .stat-icon
-            i.fa.fa-check.fa-2x
+  = link_to project_grades_path project
+    .col-sm-6.col-md-6
+      .panel-stat3.bg-success
+        h5 Avaliações
+        .stat-icon
+          i.fa.fa-check.fa-2x
