--- a/app/views/students/_accordion_widget.slim
+++ b/app/views/students/_accordion_widget.slim
@@ -1,4 +1,4 @@
-#accordion.panel-group.fadeInDown.animation-delay2
+#accordion.panel-group
 	- if students.empty?
 		= render "students/accordion_widget/empty"
 	- else
