--- a/app/views/subjects/index/search_results/_show.slim
+++ b/app/views/subjects/index/search_results/_show.slim
@@ -1,4 +1,4 @@
-.panel.panel-default.fadeInDown.animation-delay2
+.panel.panel-default
   .panel-body
     h4.inline-block #{subject.name} &bull; #{subject.academic_year.academic_year}
     .pull-right style="margin-top: 10px;"
