--- a/app/views/deliveries/_simple_widget.slim
+++ b/app/views/deliveries/_simple_widget.slim
@@ -1,6 +1,6 @@
 - mode ||= "project"
 - type ||= "student"
-.panel.panel-default.fadeInDown class="animation-delay#{mode=="phase" ? 1 : 2}"
+.panel.panel-default class="animation-delay#{mode=="phase" ? 1 : 2}"
   .panel-heading
     = title
     .pull-right 
