--- a/app/views/projects/_simple_widget.slim
+++ b/app/views/projects/_simple_widget.slim
@@ -1,4 +1,4 @@
-.panel.panel-default.fadeInDown.animation-delay2
+.panel.panel-default
   .panel-heading #{title}
   .panel-body.no-padding
     ul#feedList.list-group
