--- a/app/views/projects/show/_groups.slim
+++ b/app/views/projects/show/_groups.slim
@@ -1,9 +1,9 @@
 .alert.alert-info
   i 
     - if project.max_elems.nil?
-      |  Os grupos devem ser constituídos por pelo menos #{project.min_elems} elementos.
+      |  Os grupos devem ser constituídos por pelo menos #{project.min_elems} elemento#{"s" if project.min_elems>1}.
     - else
       - if project.max_elems == project.min_elems
-        | Os grupos devem ser constituídos por #{project.min_elems} elementos.
+        | Os grupos devem ser constituídos por #{project.min_elems} elemento#{"s" if project.min_elems>1}.
       - else
         |  Os grupos devem ser constituídos por #{project.min_elems} a #{project.max_elems} elementos.
