--- a/app/views/tests/_accordion_widget.slim
+++ b/app/views/tests/_accordion_widget.slim
@@ -1,4 +1,4 @@
-#accordion.panel-group.fadeInDown.animation-delay1
+#accordion.panel-group
   - if tests.empty?
     = render "tests/accordion_widget/empty"
   - else
