--- a/app/views/tests/accordion_widget/show/_description.slim
+++ b/app/views/tests/accordion_widget/show/_description.slim
@@ -1,7 +1,6 @@
-.panel.panel-default.fadeInDown.animation-delay1
+.panel.panel-default
   .panel-heading Informações da fase
   .panel-body.project-info
-
     row.text-center
       .col-md-6
         i.fa.fa-clock-o  
@@ -11,7 +10,6 @@
         i.fa.fa-clock-o  
           b  Data de fim: 
           span.text-danger #{date_time_or_undef phase.end_date}
-
     br
     br
 
