--- a/app/views/users/registrations/new.slim
+++ b/app/views/users/registrations/new.slim
@@ -2,7 +2,7 @@ body.login-bg
   .login-wrapper
     = link_to root_path  
       .logo-login.bounceIn
-    .login-widget.animation-delay1
+    .login-widget
       .panel.panel-default
         .panel-heading
           i.fa.fa-plus-circle.fa-lg
@@ -15,27 +15,27 @@ body.login-bg
               = select nil, :type, options_for_select([["Estudante", "student"], ['Docente', "teacher"]], 2)
             .form-group
               = f.label :name, "Nome"
-              = f.text_field :name, autofocus: true, class: "form-control input-sm bounceIn animation-delay2"
+              = f.text_field :name, autofocus: true, class: "form-control input-sm bounceIn"
             .form-group
               = f.label :email, "Email"
-              = f.email_field :email, class: "form-control input-sm bounceIn animation-delay3 "
+              = f.email_field :email, class: "form-control input-sm bounceIn "
             .form-group#identifier 
               = label :identifier, "Número de aluno"
-              = text_field_tag :identifier, nil, class: "form-control input-sm bounceIn animation-delay4 "
+              = text_field_tag :identifier, nil, class: "form-control input-sm bounceIn "
             .form-group
               = f.label :phone, "Telemóvel"
-              = f.text_field :phone, class: "form-control input-sm bounceIn animation-delay5"
+              = f.text_field :phone, class: "form-control input-sm bounceIn"
             .form-group
               = f.label :password, "Palavra-passe" 
-              = f.password_field :password, :class => "form-control input-sm bounceIn animation-delay6"
+              = f.password_field :password, :class => "form-control input-sm bounceIn"
             .form-group
               = f.label :password_confirmation, "Confirmar palavra-passe"
-              = f.password_field :password_confirmation, class: "form-control input-sm bounceIn animation-delay7"
+              = f.password_field :password_confirmation, class: "form-control input-sm bounceIn"
             .seperator
             hr/
             .form-group
               = link_to "Já criou conta? Faça login", login_path, class: "pull-left"
               .controls.text-right
-                = f.submit "Registar" , class: "btn btn-success btn-sm bounceIn animation-delay8 login-link pull-right"
+                = f.submit "Registar" , class: "btn btn-success btn-sm bounceIn login-link pull-right"
 
   script src="assets/registration.coffee"
