Remove animaçoes e alterações no modelo de um projeto

--- a/app/views/projects/show/_description.slim
+++ b/app/views/projects/show/_description.slim
@@ -1,4 +1,4 @@
-.panel.panel-default.fadeInDown.animation-delay2
+.panel.panel-default
   .panel-heading 
     | Informações do Projeto
     - if type=="teacher"
