Termina formulário de criação de novo projeto e pequenos fixes

--- a/app/views/pages/dashboard/_teacher_utilities.slim
+++ b/app/views/pages/dashboard/_teacher_utilities.slim
@@ -5,4 +5,4 @@
         h5 Criar novo projeto
         .stat-icon
           i.fa.fa-file.fa-2x
-= render "projects/modal_new", project: project
+= render "projects/modal_new", project: project, user: user
