--- a/app/views/projects/_modal_new.slim
+++ b/app/views/projects/_modal_new.slim
@@ -1,43 +1,40 @@
-#CreateProject.modal.fade aria-hidden="true" style=("display: none;") 
-  .modal-dialog style="width: 800px"
+#CreateProject.modal.fade aria-hidden="true" style="display: none;"
+  .modal-dialog
     .modal-content
-      .modal-header style="border: none"
+      .modal-header
         button.close aria-hidden="true" data-dismiss="modal" type="button"  ×
         h4 Criar novo projeto
       .modal-body style="padding: 0"
         .panel.panel-default
-          = form_for project, html: {id: "addProjectWizard", class: "form-horizontal no-margin form-border"} do |f| 
-            .panel-tab
-              ul.wizard-steps
-                li.active
-                  a data-toggle="tab" href="#ProjectInfo"  Informações do Projeto
-                li
-                  a data-toggle="tab" href="#GroupsInfo"  Informações dos Grupos
+          = form_for project, html: {multipart: true, class: "form-horizontal no-margin form-border"} do |f| 
             .panel-body
               .tab-content
-                #ProjectInfo.tab-pane.fade.in.active
+                .tab-pane.fade.in.active
                   .form-group
-                    label.control-label.col-lg-2 Nome
-                    .col-lg-8
-                      = f.text_field :name, class: "input form-control input-sm parsley-validated", placeholder: "Nome do Projeto", data:{required:"true"}, type:"text"
+                    .col-lg-12
+                      = collection_select :project, :subject_id, user.subjects, :id, :name, {}, {class: "chzn-select form-control"}
                   .form-group
-                    label.control-label.col-lg-2 Descrição
-                    .col-lg-8
-                      = f.text_area :description, id: "wysihtml5-textarea", class: "input form-control input-sm parsley-validated", placeholder: "Descrição do Projeto", data:{required:"true"}, type:"text", rows:"6"
+                    .col-lg-12
+                      = f.text_field :name, class: "input form-control", placeholder: "Nome do Projeto", data:{required:"true"}
                   .form-group
-                    label.control-label.col-lg-2 Enunciado
-                    .col-lg-8
+                    .col-lg-12
+                      = f.text_area :description, id: "wysihtml5-textarea", class: "input form-control", placeholder: "Descrição do Projeto", data:{required:"true"}, rows:"6"
+                  .form-group
+                    .col-lg-12
+                      = f.text_field :begin_date, class: "input form-control datepicker", placeholder: "Data de Início", data:{required:"true"}
+                  .form-group
+                    .col-lg-12
                       .upload-file
-                        input#upload-demo.upload-demo type="file" 
+                        input#upload-demo.upload-demo type="file" name="statement"
                           label data-title=("Select file") for="upload-demo" 
-                            span data-title=("No file selected...") 
+                            span data-title=("No file selected...")
 
             .panel-footer.clearfix
               .pull-right
-                button#prevStep1.btn.btn-success.btn-sm.disabled disabled="" style="width:100px;" Previous
-                button#nextStep1.btn.btn-sm.btn-success type="submit" style="width:100px;margin-left: 10px"  Next
+                button.btn.btn-success type="submit" Criar Projeto
 
 = javascript_include_tag "chosen.jquery.min.js"
 = javascript_include_tag "wysihtml5-0.3.0.min.js"
 = javascript_include_tag "uncompressed/bootstrap-wysihtml5.js"
+= javascript_include_tag "bootstrap-datepicker.min.js"
 = javascript_include_tag "endless_form.js"
