--- a/app/views/projects/show/_utilities.slim
+++ b/app/views/projects/show/_utilities.slim
@@ -2,13 +2,13 @@
   - if project.statement
     = link_to show_file_path project.statement, target: "_blank"
       .col-sm-6.col-md-6
-        .panel-stat3.bg-primary
+        .panel-stat3.bg-primary 
           h5 Enunciado
           .stat-icon
             i.fa.fa-file-text-o.fa-2x
   - else
     .col-sm-6.col-md-6
-      .panel-stat3.bg-primary
+      .panel-stat3.bg-primary style="opacity:0.2"
         h5 Enunciado
         .stat-icon
           i.fa.fa-file-text-o.fa-2x
