--- a/app/views/shared/_sidebar.slim
+++ b/app/views/shared/_sidebar.slim
@@ -39,8 +39,8 @@ aside.fixed.skin-6
             span.text Calendário
             span.menu-hover
 
-        li
-          a href="#"
+        li class="#{'active' if active=='projects'}"
+          a href="#{projects_path}"
             span.menu-icon
               i.fa.fa-file.fa-lg
             span.text Projetos
