Adds modal for project edition

--- a/app/views/projects/show/_teacher_utilities.slim
+++ b/app/views/projects/show/_teacher_utilities.slim
@@ -14,3 +14,4 @@
           small Publique o projeto para que os alunos possam consultar.
           .stat-icon
             i.fa.fa-share.fa-3x
+= render "projects/modal_edit", project: project, user: @user
