--- a/app/views/projects/show/_description.slim
+++ b/app/views/projects/show/_description.slim
@@ -2,9 +2,10 @@
   .panel-heading 
     | Informações do Projeto
     - if type=="teacher"
-      .pull-right
-        .btn.btn-xs
-          i.fa.fa-cogs  Editar informações do projeto
+      a href="#editProject" role="button" data-toggle="modal"
+        .pull-right
+          .btn.btn-xs
+            i.fa.fa-cogs  Editar informações do projeto
   .panel-body.project-info
     = raw project.description.try(:html_safe)
     br
