--- a/app/views/projects/show/_utilities.slim
+++ b/app/views/projects/show/_utilities.slim
@@ -1,6 +1,6 @@
 .row.project-utilities
   - if project.statement
-    = link_to show_file_path project.statement, target: "_blank"
+    = link_to show_file_path project.statement
       .col-sm-6.col-md-6
         .panel-stat3.bg-primary 
           h5 Enunciado
