--- a/app/views/subjects/index.slim
+++ b/app/views/subjects/index.slim
@@ -4,13 +4,13 @@
 #main-container
   = render "shared/dashboard/breadcrumb", user: @user, sections: [{name:"Painel do #{@user.type_pt.capitalize}",link: dashboard_path},{name:"Gestão de unidades curriculares", link:"#"}]
   = render "shared/dashboard/header", header: "Gestão de unidades curriculares"
-  
-  .padding-md    
+
+  .padding-md
     .row
-      .col-md-8 
+      .col-md-8
         = render "subjects/index/search_input"
         = render "subjects/index/search_results", subjects: @subjects_filtered, student: @user, assigned_student: @assigned_student
       .col-md-4
         = render "shared/messages"
-        = render "assigned_students/simple_widget", title: "Inscrições pendentes", subjects: @waiting_subjects, mode: "pending", student: @user
+        = render "assigned_students/simple_widget", title: "Inscrições pendentes", subjects: @waiting_subjects, mode: "pending", student: @user if @user.student?
         = render "academic_years/accordion_widget", academic_years: @academic_years, subjects: @subjects, mode: "management", student: @user
