Adicionado: 'Adicionar Docentes' a uma Unidade Curricular

--- a/app/views/subjects/show.slim
+++ b/app/views/subjects/show.slim
@@ -22,5 +22,5 @@
           = render "subjects/show/utilities", subject: @subject
           = render "notifications/simple_widget", title: "Últimas notificações", notifications: @notifications
           = render "subjects/show/teachers", teachers: @subject.teachers, user: @user, subject: @subject
-
+          = render "subjects/show/shifts"
 
