--- a/app/views/subjects/show/_utilities.slim
+++ b/app/views/subjects/show/_utilities.slim
@@ -1,14 +1,14 @@
 .row.project-utilities
   .col-sm-6.col-md-6
-    .panel-stat3.bg-success
+    .panel-stat3.bg-info
           h5 Alunos
           .stat-icon
             i.fa.fa-users.fa-2x
   .col-sm-6.col-md-6
-    .panel-stat3.bg-info
-          h5 Turnos
+    .panel-stat3.bg-success
+          h5 Avaliações
           .stat-icon
-            i.fa.fa-users.fa-2x
+            i.fa.fa-check.fa-2x
 
 
 
