--- a/app/views/subjects/show/teachers/_new.slim
+++ b/app/views/subjects/show/teachers/_new.slim
@@ -1,8 +1,4 @@
 .panel-body.no-padding
     ul#feedList.list-group.collapse.in
       li.list-group-item.clearfix
-        .form-group
-          .col-lg-12
-            br
-            br
-            button.btn.btn-success type="submit" style="width:100%" Adicionar docentes
+        = render "subjects/show/teachers/form", subject: subject, freeTeachers: subject.freeTeachers
