Adicionado 'Adicionar alunos a um turno'

--- a/app/views/shifts/_new.slim
+++ b/app/views/shifts/_new.slim
@@ -3,6 +3,6 @@
   .panel-body.no-padding
     ul#feedList.list-group.collapse.in
       li.list-group-item.clearfix
-        = render "shifts/form", shift: @shift, subject: @subject
+        = render "shifts/form", shift: @shift, subject: subject
 
 
