Adicionado listar e remover aluno de um turno

--- a/app/views/shifts/_simple_widget.slim
+++ b/app/views/shifts/_simple_widget.slim
@@ -6,7 +6,7 @@
       - if shift.students.empty?
         = render "shifts/simple_widget/empty"
       - else
-        = render "shifts/simple_widget/show"
+        = render "shifts/simple_widget/show", shift: shift
 
 
 
