Adicionado listar turnos no perfil de uma UC

--- a/app/views/subjects/show/_shifts.slim
+++ b/app/views/subjects/show/_shifts.slim
@@ -8,4 +8,8 @@
             i.fa.fa-cogs  Gerir turnos
   .panel-body.no-padding
     ul#feedList.list-group.collapse.in
+     - if subject.shifts.empty?
+      = render "subjects/show/shifts/empty"
+     - else
+      = render "subjects/show/shifts/index", shifts: subject.shifts
 
