--- a/app/views/subjects/show/_utilities.slim
+++ b/app/views/subjects/show/_utilities.slim
@@ -1,9 +1,10 @@
 .row.project-utilities
-  .col-sm-6.col-md-6
-    .panel-stat3.bg-info
-          h5 Alunos
-          .stat-icon
-            i.fa.fa-users.fa-2x
+  = link_to subject_students_path subject
+    .col-sm-6.col-md-6
+      .panel-stat3.bg-info
+            h5 Alunos
+            .stat-icon
+              i.fa.fa-users.fa-2x
   .col-sm-6.col-md-6
     .panel-stat3.bg-success
           h5 Avaliações
