--- a/app/views/students/_simple_widget.slim
+++ b/app/views/students/_simple_widget.slim
@@ -1,6 +1,10 @@
-.panel.panel-default
-  ul#feedList.list-group.collapse.in
-    = render "students/simple_widget/show_#{mode}", student: student
+- if mode == "enrolled"
+  .col-md-6 class="isotope-item"
+    .panel.panel-default
+      ul#feedList.list-group.collapse.in
+        = render "students/simple_widget/show_#{mode}", student: student
+- else
+  = render "students/simple_widget/show_#{mode}", student: student
 
 
 
