--- a/app/views/students/widgets_group/_index.slim
+++ b/app/views/students/widgets_group/_index.slim
@@ -1,2 +1,2 @@
 - students.each do |student|
-  = render "students/simple_widget", mode: mode, student: student
+  = render "students/simple_widget", mode: mode, student: student, user: user, subject: subject
