--- a/app/views/subjects/students.slim
+++ b/app/views/subjects/students.slim
@@ -10,7 +10,7 @@
       .col-md-12
         = render "shared/messages"
     .row
-      = render "students/widgets_group", subject: @subject
+      = render "students/widgets_group", subject: @subject, user: @user
 
 
 javascript:
