--- a/app/views/students/simple_widget/_show_enrolled.slim
+++ b/app/views/students/simple_widget/_show_enrolled.slim
@@ -3,9 +3,10 @@ li.list-group-item.clearfix
     .pull-left.m-right-sm
       img.img-circle alt="User Avatar" src="#{student.student.avatar.url}" style="width:55px;height:55px;"
     strong.block #{student.student.name}
-    .pull-right
-      = link_to student, method: :delete, data: { confirm: "Tem a certeza que pretende remover este aluno desta Unidadede Curricular? \n\n" }, class: "btn btn-xs btn-warning"
-            i.fa.fa-sign-out  Remover
+    - if user.teacher && subject.isResponsible?(user)
+      .pull-right
+        = link_to student, method: :delete, data: { confirm: "Tem a certeza que pretende remover este aluno desta Unidadede Curricular? \n\n" }, class: "btn btn-xs btn-warning"
+              i.fa.fa-sign-out  Remover
     - if student.shift
       small.text-muted
         i.i.fa.fa-users #{student.shift.name}
