--- a/app/views/teachers/simple_widget/_index.slim
+++ b/app/views/teachers/simple_widget/_index.slim
@@ -1,2 +1,2 @@
 - teachers.each do |teacher|
-  = render "teachers/simple_widget/show", teacher: teacher
+  = render "teachers/simple_widget/show", teacher: teacher, subject: subject, user: user
