--- a/app/views/subjects/index.slim
+++ b/app/views/subjects/index.slim
@@ -7,4 +7,7 @@
 
   .padding-md
     .row
+        .col-md-12
+          = render "shared/messages"
+    .row
       = render "subjects/index/index_#{@user.type}"
