--- a/app/views/subjects/index/search_results/_show.slim
+++ b/app/views/subjects/index/search_results/_show.slim
@@ -2,18 +2,19 @@
   .panel-body
     = link_to subject
       h4.inline-block #{subject.name} &bull; #{subject.academic_year.academic_year}
-      .pull-right style="margin-top: 10px;"
+      - if student.student?
+        .pull-right style="margin-top: 10px;"
 
-        - assigned_student_found = AssignedStudent.find_by(student_id: student.id, subject_id: subject.id)
-        - if assigned_student_found.nil?
-          = form_for assigned_student do |f|
-            = f.hidden_field :student_id, value:"#{student.id}"
-            = f.hidden_field :subject_id, value:"#{subject.id}"
-            button.btn.btn-sm.btn-success type="submit"
-              i.fa.fa-check  Inscrever
-        - elsif !assigned_student_found.accepted
-          .btn.btn-sm.btn-warning type="submit" style="opacity:0.7"
-            i.fa.fa-spinner  Aguarda aprovação
+          - assigned_student_found = AssignedStudent.find_by(student_id: student.id, subject_id: subject.id)
+          - if assigned_student_found.nil?
+            = form_for assigned_student do |f|
+              = f.hidden_field :student_id, value:"#{student.id}"
+              = f.hidden_field :subject_id, value:"#{subject.id}"
+              button.btn.btn-sm.btn-success type="submit"
+                i.fa.fa-check  Inscrever
+          - elsif !assigned_student_found.accepted
+            .btn.btn-sm.btn-warning type="submit" style="opacity:0.7"
+              i.fa.fa-spinner  Aguarda aprovação
 
     .text-muted #{subject.course.name} &bull; #{subject.course.institution.name}
     br
